force-app/main/default/objects/PorPerfil__c/PorPerfil__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>PorPerfil</label>
</CustomObject>