force-app/main/default/objects/PorPerfil__c/fields/BotonCrear__c.field-meta.xml
<CustomField>
    <fullName>BotonCrear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BotonCrear</label>
    <type>Checkbox</type>
</CustomField>