force-app/main/default/objects/PorPerfil__c/fields/BotonModificar__c.field-meta.xml
<CustomField>
    <fullName>BotonModificar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BotonModificar</label>
    <type>Checkbox</type>
</CustomField>