force-app/main/default/objects/PorPerfil__c/fields/BotonVer__c.field-meta.xml
<CustomField>
    <fullName>BotonVer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BotonVer</label>
    <type>Checkbox</type>
</CustomField>