force-app/main/default/objects/PorPerfil__c/fields/Mensaje__c.field-meta.xml
<CustomField>
    <fullName>Mensaje__c</fullName>
    <label>Mensaje</label>
    <length>80</length>
    <type>Text</type>
</CustomField>